@@ -94,6 +94,8 @@ target_sources(dpclient PRIVATE
 	drawdance/paintengine.h
 	drawdance/perf.cpp
 	drawdance/perf.h
+	drawdance/pixels.cpp
+	drawdance/pixels.h
 	drawdance/selection.cpp
 	drawdance/selection.h
 	drawdance/selectionset.cpp
