@@ -26,6 +26,7 @@ Unreleased Version 2.3.1-pre
  * Feature: Allow viewing project statistics, such as length of sessions and work time, via File → Project statistics. Requires enabling autosave and saving to a dppr file.
  * Feature: Timelapses, via File → Make timelapse. Requires enabling autosave and saving to a dppr file.
  * Feature: Allow triggering undo, redo, hide docks and any other actions via canvas shortcut. Thanks RubySnoot for suggesting.
+ * Feature: Make right-clicking with the freehand tool draw with the background color. Thanks doughie for suggesting.
 
 2025-11-18 Version 2.3.0
  * Fix: Don't show "exit layer view" notice when there's no canvas.
